re #16 adding overflow hidden on #debug to avoid funky layout issues

--- a/code/media/com_debug/css/debug-default.css
+++ b/code/media/com_debug/css/debug-default.css
@@ -1,5 +1,6 @@
 #debug {
 	height: 300px;
+	overflow: hidden;
 	border-top: 2px solid #AAA;
 }
 
